Adding technical page for RAPTRS

--- a/raptrs/index.html
+++ b/raptrs/index.html
@@ -140,6 +140,7 @@
   <li><a href="#why" id="markdown-toc-why">Why?</a></li>
   <li><a href="#goals" id="markdown-toc-goals">Goals</a></li>
   <li><a href="#status" id="markdown-toc-status">Status</a></li>
+  <li><a href="#raptrs-technical-pages" id="markdown-toc-raptrs-technical-pages">RAPTRS Technical Pages</a></li>
   <li><a href="#contributing" id="markdown-toc-contributing">Contributing</a></li>
 </ul>
 
@@ -173,7 +174,8 @@ Stretch goal:</li>
   <li>Implement a GUI for aircraft configuration and build a ground station.</li>
 </ol>
 
-<p style="font-size: 80%;">During development we will write articles about current developments and what we are working on. These can be accessed via our <a href="/raptrs/technical">RAPTRS technical pages</a>. Additionally, we have an ongoing discussion on the <a href="">PJRC forum</a>, a forum for the Teensy microcontrollers, which are used for the Flight Management Unit and Nodes in our flight control system.</p>
+<h1 id="raptrs-technical-pages">RAPTRS Technical Pages</h1>
+<p style="font-size: 80%;">During development we will write articles about current developments and what we are working on. These can be accessed via our <a href="/raptrs/technical">RAPTRS technical pages</a>. Additionally, we have an ongoing discussion on the <a href="https://forum.pjrc.com/threads/53457-Teensy-3-6-UAS-Flight-Software-RAPTRS">PJRC forum</a>, a forum for the Teensy microcontrollers, which are used for the Flight Management Unit and Nodes in our flight control system.</p>
 
 <h1 id="contributing">Contributing</h1>
 <p style="font-size: 80%;">Contributions in the form of <a href="https://github.com/bolderflight/RAPTRS">pull requests</a> are appreciated. Device drivers, estimation algorithms, and other self contained components are located in their own repostories on <a href="https://github.com/bolderflight">GitHub</a> before integration into <a href="https://github.com/bolderflight/RAPTRS">RAPTRS</a>. We use <a href="https://google.github.io/styleguide/cppguide.html">Google’s C++ style guide</a> for C++ software and the <a href="https://github.com/torvalds/linux/blob/master/Documentation/process/coding-style.rst">Linux style guide</a> for C software. If you would like to join the development team, please contact me at: <a href="mailto:brian.taylor@bolderflight.com">brian.taylor@bolderflight.com</a>.</p>
