--- a/raptrs/technical.html
+++ b/raptrs/technical.html
@@ -133,7 +133,9 @@
     
 
     <section class="page__content" itemprop="text">
-      <p>Posts coming soon!</p>
+      <h1 id="raptrs-technical-articles">RAPTRS Technical Articles</h1>
+
+<p>Posts coming soon!</p>
 
     </section>
   </article>
