Added Hardware Integration Manual

--- a/technical/index.html
+++ b/technical/index.html
@@ -239,6 +239,7 @@
   <li>Size: 55 mm x 89 mm x 30.5 mm</li>
   <li>Weight: 75 g</li>
   <li><a href="/assets/docs/marmot-fcs-sch.pdf">Schematic</a></li>
+  <li><a href="/assets/docs/Hardware-Integration-Manual.pdf">Hardware Integration Manual</a></li>
 </ul>
 
 <div id="product-component-0e08ed4dc33"></div>
@@ -392,6 +393,7 @@
   <li>Size: 45 mm x 70 mm x 8.5 mm</li>
   <li>Weight: 20 g</li>
   <li><a href="/assets/docs/raven-node-sch.pdf">Schematic</a></li>
+  <li><a href="/assets/docs/Hardware-Integration-Manual.pdf">Hardware Integration Manual</a></li>
 </ul>
 
 <div id="product-component-c73ef87cda4"></div>
@@ -538,6 +540,7 @@
   <li>Current draw: 20 mA</li>
   <li>Size: 28 mm x 40 mm x 18.5 mm</li>
   <li>Weight: 10 g</li>
+  <li><a href="/assets/docs/Hardware-Integration-Manual.pdf">Hardware Integration Manual</a></li>
 </ul>
 
 <div id="product-component-c941da0abda"></div>
@@ -684,6 +687,7 @@
   <li>Current draw: up to 12A</li>
   <li>Size: 22 mm x 30 mm x 12 mm</li>
   <li>Weight: 4 g</li>
+  <li><a href="/assets/docs/Hardware-Integration-Manual.pdf">Hardware Integration Manual</a></li>
 </ul>
 
 <h4 id="sbus">SBUS</h4>
@@ -694,6 +698,7 @@
   <li>Current draw: up to 12A</li>
   <li>Size: 22 mm x 30 mm x 12 mm</li>
   <li>Weight: 4 g</li>
+  <li><a href="/assets/docs/Hardware-Integration-Manual.pdf">Hardware Integration Manual</a></li>
 </ul>
 
 <h4 id="analog">Analog</h4>
@@ -703,6 +708,7 @@
   <li>Voltage supply: +3.3V</li>
   <li>Size: 22 mm x 30 mm x 12 mm</li>
   <li>Weight: 2 g</li>
+  <li><a href="/assets/docs/Hardware-Integration-Manual.pdf">Hardware Integration Manual</a></li>
 </ul>
 
 <p style="font-size: 75%;"><a href="/technical/#Overview">Back to top.</a></p>
@@ -717,6 +723,7 @@
   <li>Supports VN-100 and VN-200 IMU’s</li>
   <li>Size: 30 mm x 37 mm x 5 mm</li>
   <li>Weight: 5 g</li>
+  <li><a href="/assets/docs/Hardware-Integration-Manual.pdf">Hardware Integration Manual</a></li>
 </ul>
 
 <div id="product-component-6a95a18680d"></div>
