Adding section links for each product.

--- a/products/teensy/index.html
+++ b/products/teensy/index.html
@@ -143,6 +143,8 @@
 
 <p style="font-size: 80%;">We are initially offering 10 different backpacks for pre-sale. Order by October 1st to receive a 15% discount and boards will ship by mid-November. These initial boards are perfect for robotics and drones. We’ll be continuing to develop additional backpacks, including: wifi, BTLE, LoRa, 900 MHz and 433 MHz radios, and lipo charging. Please email us at <a href="mailto:info@bolderflight.com">info@bolderflight.com</a> with additional backpack suggestions.</p>
 
+<p><a name="Backpack-Frame"></a></p>
+
 <h3 id="backpack-frame">Backpack Frame</h3>
 
 <p><img src="/assets/images/Double-Frame-200.png" alt="image-left" class="align-left" /></p>
@@ -264,6 +266,8 @@
 })();
 /*]]>*/
 </script>
+
+<p><a name="Motion-Backpack"></a></p>
 
 <h3 id="motion-backpack">Motion Backpack</h3>
 
@@ -387,6 +391,8 @@
 /*]]>*/
 </script>
 
+<p><a name="GNSS-Backpack"></a></p>
+
 <h3 id="gnss-backpack">GNSS Backpack</h3>
 
 <p><img src="/assets/images/GNSS-200.png" alt="image-left" class="align-left" /></p>
@@ -509,6 +515,8 @@
 /*]]>*/
 </script>
 
+<p><a name="ADC-Backpack"></a></p>
+
 <h3 id="adc-backpack">ADC Backpack</h3>
 <p style="font-size: 80%;">Add two <a href="http://www.ti.com/lit/ds/symlink/ads1115.pdf">ADS1115 analog to digital converters</a> for 8 channels of analog input sampled with 16 bit resolution. Analog inputs are pinned at a 0.1” (2.54 mm) spacing along with power and ground for easy potentiometer integration.</p>
 
@@ -627,6 +635,8 @@
 })();
 /*]]>*/
 </script>
+
+<p><a name="PWM-Backpack"></a></p>
 
 <h3 id="pwm-backpack">PWM Backpack</h3>
 
@@ -750,6 +760,8 @@
 /*]]>*/
 </script>
 
+<p><a name="SBUS-Backpack"></a></p>
+
 <h3 id="sbus-backpack">SBUS Backpack</h3>
 
 <p><img src="/assets/images/SBUS-Backpack-200.png" alt="image-left" class="align-left" /></p>
@@ -871,6 +883,8 @@
 })();
 /*]]>*/
 </script>
+
+<p><a name="CAN-Backpack"></a></p>
 
 <h3 id="can-backpack">CAN Backpack</h3>
 
@@ -994,6 +1008,8 @@
 /*]]>*/
 </script>
 
+<p><a name="RS485-Backpack"></a></p>
+
 <h3 id="rs-485-backpack">RS-485 Backpack</h3>
 <p style="font-size: 80%;">Add RS-485 communication to your project with the RS-485 backpack! This backpack integrates the <a href="https://www.maximintegrated.com/en/products/interface/transceivers/MAX485.html">MAX485</a> RS-485 transceiver with six 0.1” (2.54 mm) connectors including +5V power, signal, and GND.</p>
 
@@ -1113,6 +1129,8 @@
 /*]]>*/
 </script>
 
+<p><a name="Flash-Backpack"></a></p>
+
 <h3 id="flash-backpack">Flash Backpack</h3>
 <p style="font-size: 80%;">Add 128 MBytes of flash storage with the Flash backpack! This backpack integrates two <a href="http://www.cypress.com/file/177971/download">Cypress S25FL512S</a> flash memory IC’s. Perfect for high speed data logging and works with the <a href="https://github.com/PaulStoffregen/SerialFlash">Teensy SerialFlash library</a>.</p>
 
@@ -1231,6 +1249,8 @@
 })();
 /*]]>*/
 </script>
+
+<p><a name="SD-Backpack"></a></p>
 
 <h3 id="sd-backpack">SD Backpack</h3>
 <p style="font-size: 80%;">Add a micro SD card with the SD backpack! This backpack integrates a micro SD card, power regulation, and level shifters to meet all your data logging needs.</p>
