--- a/products/teensy/index.html
+++ b/products/teensy/index.html
@@ -141,17 +141,19 @@
 
 <p style="font-size: 80%;">We’re extremely excited to be the first to offer stacking add-on boards for Teensy! Matching the Teensy 3.2 footprint, these high quality boards extend the utility of your Teensy and are perfect for embedding Teensy in your projects. We’ve carefully designed each board to integrate well with each other, so you can mix and match boards without worry. See our <a href="/products/teensy/pinout/">Teensy Backpacks Pinout</a> page for more information on how they stack together.</p>
 
-<p style="font-size: 80%;">We are initially offering 10 different backpacks for pre-sale. Order by October 1st to receive a 15% discount and boards will ship by mid-November. These initial boards are perfect for robotics and drones. We’ll be continuing to develop additional backpacks, including: wifi, BTLE, LoRa, 900 MHz and 433 MHz radios, and lipo charging. Please email us at <a href="mailto:info@bolderflight.com">info@bolderflight.com</a> with additional backpack suggestions.</p>
+<p style="font-size: 80%;">These initial boards are perfect for robotics and drones. We’ll be continuing to develop additional backpacks, including: wifi, BTLE, LoRa, 900 MHz and 433 MHz radios, and lipo charging. Please email us at <a href="mailto:info@bolderflight.com">info@bolderflight.com</a> with additional backpack suggestions.</p>
 
 <p><a name="Backpack-Frame"></a></p>
 
-<h3 id="backpack-frame">Backpack Frame</h3>
+<h3 id="backpack-frame"><a href="/products/teensy/frame/">Backpack Frame</a></h3>
 
-<p><img src="/assets/images/Double-Frame-200.png" alt="image-left" class="align-left" /></p>
+<p><a href="/products/teensy/frame/"><img src="/assets/images/Double-Frame-200.png" alt="image-left" class="align-left" /></a></p>
 
-<p style="font-size: 80%;">Available in Solo and Double variants, the Teensy Backpack Frame allows you to easily mount your teensy and provide external power. Both variants have four 2-56 mounting holes and a screw terminal for accepting 16-28 AWG wire. The Double variant stacks two teensy footprints side-by-side, enabling you to use more backpacks with a lower stack height. Both frames have the option of adding power regulation, enabling you to use +6.5V to +36V input; perfect for powering your project directly from a 2S to 6S lipo battery.</p>
+<p style="font-size: 80%;">Available in Solo and Double variants, the Teensy Backpack Frame allows you to easily mount your teensy and power your projects with 8 - 28V! Optionally available with the TSR 1-2450 regulator for an extended input range of 6.5 - 32V for $5 more.</p>
 
-<p style="font-size: 80%;">The Solo Backpack Frame is on pre-sale for $10, the Double for $14 and it’s an additional $5 if you would like to add power regulation.</p>
+<p><a href="/products/teensy/frame/" class="btn btn--primary">More Details</a></p>
+
+<p><strong>Solo Frame: $15</strong>    <strong>Double Frame $18</strong></p>
 
 <div id="product-component-4d130d1a996"></div>
 <script type="text/javascript">
@@ -269,13 +271,15 @@
 
 <p><a name="Motion-Backpack"></a></p>
 
-<h3 id="motion-backpack">Motion Backpack</h3>
+<h3 id="motion-backpack"><a href="/products/teensy/motion/">Motion Backpack</a></h3>
 
-<p><img src="/assets/images/Motion-Backpack-200.png" alt="image-left" class="align-left" /></p>
+<p><a href="/products/teensy/motion/"><img src="/assets/images/Motion-Backpack-200.png" alt="image-left" class="align-left" /></a></p>
 
-<p style="font-size: 80%;">Measure motion information and estimate your attitude with the Teensy Motion Backpack! This backpack includes a <a href="https://www.invensense.com/products/motion-tracking/9-axis/mpu-9250/">MPU-9250 9-DOF inertial measurement unit (IMU)</a> and a <a href="https://www.bosch-sensortec.com/bst/products/all_products/bme280">BME-280 environment sensor</a>. With this backpack, you’ll be able to measure: 3-axis acceleration, 3-axis rotational rate, 3-axis magnetic field, pressure, humidity, and temperature. Perfect for estimating and controlling your robot or drones orientation and altitude! Both sensors communicate over I2C and feature integrated pullup resistors and selectable addresses. High quality <a href="https://github.com/bolderflight/MPU9250">MPU-9250</a> and <a href="https://github.com/bolderflight/BME280">BME-280</a> libraries are available.</p>
+<p style="font-size: 80%;">Measure motion and the environment with a MPU-9250 9-DOF inertial measurement unit (IMU) and a BME-280 environment sensor measuring pressure, temperature, and humidity. Perfect for estimating your robot or drone’s orientation and altitude!</p>
 
-<p style="font-size: 80%;">Pre-order your Motion Backpack today for $27!</p>
+<p><a href="/products/teensy/motion/" class="btn btn--primary">More Details</a></p>
+
+<p><strong>$27</strong></p>
 
 <div id="product-component-a42c06bea2a"></div>
 <script type="text/javascript">
@@ -393,13 +397,15 @@
 
 <p><a name="GNSS-Backpack"></a></p>
 
-<h3 id="gnss-backpack">GNSS Backpack</h3>
+<h3 id="gnss-backpack"><a href="/products/teensy/gnss/">GNSS Backpack</a></h3>
 
-<p><img src="/assets/images/GNSS-200.png" alt="image-left" class="align-left" /></p>
+<p><a href="/products/teensy/gnss/"><img src="/assets/images/GNSS-200.png" alt="image-left" class="align-left" /></a></p>
 
-<p style="font-size: 80%;">Add a multi-constellation GNSS to your project with the Teensy GNSS backpack! This backpack includes a <a href="https://www.u-blox.com/en/product/sam-m8q-module">uBlox SAM-M8Q GNSS module</a>. The GNSS receiver features serial and I2C communication, a pulse-per-second (PPS) signal, a CR1216 battery holder for extremely fast cold-starts, four 2-56 mounting holes, and can be mounted directly to the Teensy or detached to remotely mount the antenna. High quality <a href="https://github.com/bolderflight/UBLOX">uBlox</a> libraries are available.</p>
+<p style="font-size: 80%;">Add a multi-constellation GNSS to your project with the Teensy GNSS backpack!</p>
 
-<p style="font-size: 80%;">Pre-order your GNSS Backpack today for $30!</p>
+<p><a href="/products/teensy/gnss/" class="btn btn--primary">More Details</a></p>
+
+<p><strong>$30</strong></p>
 
 <div id="product-component-a171ff3bc04"></div>
 <script type="text/javascript">
@@ -517,10 +523,12 @@
 
 <p><a name="ADC-Backpack"></a></p>
 
-<h3 id="adc-backpack">ADC Backpack</h3>
-<p style="font-size: 80%;">Add two <a href="http://www.ti.com/lit/ds/symlink/ads1115.pdf">ADS1115 analog to digital converters</a> for 8 channels of analog input sampled with 16 bit resolution. Analog inputs are pinned at a 0.1” (2.54 mm) spacing along with power and ground for easy potentiometer integration.</p>
+<h3 id="adc-backpack"><a href="/products/teensy/adc/">ADC Backpack</a></h3>
+<p style="font-size: 80%;">Add eight channels of 16 bit analog data to your next project with the ADC Backpack! Inputs are pinned at a 0.1” (2.54 mm) pitch along with power and ground for easy potentiometer integration.</p>
 
-<p style="font-size: 80%;">Pre-order your ADC Backpack today for $19!</p>
+<p><a href="/products/teensy/adc/" class="btn btn--primary">More Details</a></p>
+
+<p><strong>$22</strong></p>
 
 <div id="product-component-4839f72a6c8"></div>
 <script type="text/javascript">
@@ -638,13 +646,15 @@
 
 <p><a name="PWM-Backpack"></a></p>
 
-<h3 id="pwm-backpack">PWM Backpack</h3>
+<h3 id="pwm-backpack"><a href="/products/teensy/pwm">PWM Backpack</a></h3>
 
-<p><img src="/assets/images/PWM_Backpack-200.png" alt="image-left" class="align-left" /></p>
+<p><a href="/products/teensy/pwm"><img src="/assets/images/PWM_Backpack-200.png" alt="image-left" class="align-left" /></a></p>
 
-<p style="font-size: 80%;">Actuate your project with up to 8 PWM signals from Teensy with the PWM backpack! All channels are pinned for standard servo connectors. Power and ground are bused so you can use an ESC or BEC on one of the channels to provide servo voltage. Optionally, one of the signals can be used for SBUS input to receive input from any SBUS capable receiver. High quality <a href="https://github.com/bolderflight/SBUS">SBUS</a> and <a href="https://www.pjrc.com/teensy/td_pulse.html">PWM</a> libraries are available.</p>
+<p style="font-size: 80%;">Actuate your project with up to 8 PWM signals from Teensy with the PWM backpack! All channels are pinned for standard servo connectors and one channel can optionally be used for SBUS input for connecting to an SBUS capable receiver.</p>
 
-<p style="font-size: 80%;">Pre-order your PWM Backpack today for $12!</p>
+<p><a href="/products/teensy/pwm/" class="btn btn--primary">More Details</a></p>
+
+<p><strong>$12</strong></p>
 
 <div id="product-component-ec1e441bb50"></div>
 <script type="text/javascript">
@@ -762,13 +772,15 @@
 
 <p><a name="SBUS-Backpack"></a></p>
 
-<h3 id="sbus-backpack">SBUS Backpack</h3>
+<h3 id="sbus-backpack"><a href="/products/teensy/sbus">SBUS Backpack</a></h3>
 
-<p><img src="/assets/images/SBUS-Backpack-200.png" alt="image-left" class="align-left" /></p>
+<p><a href="/products/teensy/sbus"><img src="/assets/images/SBUS-Backpack-200.png" alt="image-left" class="align-left" /></a></p>
 
-<p style="font-size: 80%;">Actuate your project with up to 8 SBUS signals from Teensy with the SBUS backpack! All channels are pinned for standard servo connectors. Power and ground are bused so you can use an ESC or BEC on one of the channels to provide servo voltage. Optionally, one of the signals can be used for SBUS input to receive input from any SBUS capable receiver. High quality <a href="https://github.com/bolderflight/SBUS">SBUS</a> libraries are available.</p>
+<p style="font-size: 80%;">Control up to 8 SBUS capable servos from Teensy with the SBUS backpack! All channels are pinned for standard servo connectors and one channel can optionally be used for SBUS input for connecting to an SBUS capable receiver.</p>
 
-<p style="font-size: 80%;">Pre-order your SBUS Backpack today for $12!</p>
+<p><a href="/products/teensy/sbus/" class="btn btn--primary">More Details</a></p>
+
+<p><strong>$12</strong></p>
 
 <div id="product-component-f87c97b7ecb"></div>
 <script type="text/javascript">
@@ -886,13 +898,15 @@
 
 <p><a name="CAN-Backpack"></a></p>
 
-<h3 id="can-backpack">CAN Backpack</h3>
+<h3 id="can-backpack"><a href="/products/teensy/can/">CAN Backpack</a></h3>
 
-<p><img src="/assets/images/CAN-Backpack-200.png" alt="image-left" class="align-left" /></p>
+<p><a href="/products/teensy/can/"><img src="/assets/images/CAN-Backpack-200.png" alt="image-left" class="align-left" /></a></p>
 
-<p style="font-size: 80%;">Add CAN communication to your project with the CAN backpack! This backpack integrates the <a href="https://www.microchip.com/wwwproducts/en/MCP2562">MCP2562</a> CAN transceiver with six 0.1” (2.54 mm) connectors including +5V power, signal, and GND.</p>
+<p style="font-size: 80%;">Add CAN communication to your project with the CAN backpack!</p>
 
-<p style="font-size: 80%;">Pre-order your CAN Backpack today for $14!</p>
+<p><a href="/products/teensy/can/" class="btn btn--primary">More Details</a></p>
+
+<p><strong>$14</strong></p>
 
 <div id="product-component-847fb6403b6"></div>
 <script type="text/javascript">
@@ -1010,10 +1024,12 @@
 
 <p><a name="RS485-Backpack"></a></p>
 
-<h3 id="rs-485-backpack">RS-485 Backpack</h3>
-<p style="font-size: 80%;">Add RS-485 communication to your project with the RS-485 backpack! This backpack integrates the <a href="https://www.maximintegrated.com/en/products/interface/transceivers/MAX485.html">MAX485</a> RS-485 transceiver with six 0.1” (2.54 mm) connectors including +5V power, signal, and GND.</p>
+<h3 id="rs-485-backpack"><a href="/products/teensy/rs485">RS-485 Backpack</a></h3>
+<p style="font-size: 80%;">Add RS-485 communication to your project with the RS-485 backpack!</p>
 
-<p style="font-size: 80%;">Pre-order your RS-485 Backpack today for $15!</p>
+<p><a href="/products/teensy/rs485/" class="btn btn--primary">More Details</a></p>
+
+<p><strong>$18</strong></p>
 
 <div id="product-component-1fab863a1e7"></div>
 <script type="text/javascript">
@@ -1131,10 +1147,12 @@
 
 <p><a name="Flash-Backpack"></a></p>
 
-<h3 id="flash-backpack">Flash Backpack</h3>
-<p style="font-size: 80%;">Add 128 MBytes of flash storage with the Flash backpack! This backpack integrates two <a href="http://www.cypress.com/file/177971/download">Cypress S25FL512S</a> flash memory IC’s. Perfect for high speed data logging and works with the <a href="https://github.com/PaulStoffregen/SerialFlash">Teensy SerialFlash library</a>.</p>
+<h3 id="flash-backpack"><a href="/products/teensy/flash/">Flash Backpack</a></h3>
+<p style="font-size: 80%;">Add 128 MBytes of flash storage with the Flash backpack!</p>
 
-<p style="font-size: 80%;">Pre-order your Flash Backpack today for $27!</p>
+<p><a href="/products/teensy/flash/" class="btn btn--primary">More Details</a></p>
+
+<p><strong>$28</strong></p>
 
 <div id="product-component-60924a7d490"></div>
 <script type="text/javascript">
@@ -1170,127 +1188,6 @@
       ui.createComponent('product', {
         id: [1375400886374],
         node: document.getElementById('product-component-60924a7d490'),
-        moneyFormat: '%24%7B%7Bamount%7D%7D',
-        options: {
-  "product": {
-    "variantId": "all",
-    "width": "240px",
-    "contents": {
-      "img": false,
-      "imgWithCarousel": false,
-      "title": false,
-      "variantTitle": false,
-      "price": false,
-      "description": false,
-      "buttonWithQuantity": false,
-      "quantity": false
-    },
-    "styles": {
-      "product": {
-        "@media (min-width: 601px)": {
-          "max-width": "100%",
-          "margin-left": "0",
-          "margin-bottom": "50px"
-        }
-      },
-      "variantTitle": {
-        "font-size": "16px"
-      },
-      "description": {
-        "font-size": "16px"
-      },
-      "compareAt": {
-        "font-size": "12px"
-      }
-    }
-  },
-  "cart": {
-    "contents": {
-      "button": true
-    },
-    "styles": {
-      "footer": {
-        "background-color": "#ffffff"
-      }
-    }
-  },
-  "modalProduct": {
-    "contents": {
-      "img": false,
-      "imgWithCarousel": true,
-      "variantTitle": false,
-      "buttonWithQuantity": true,
-      "button": false,
-      "quantity": false
-    },
-    "styles": {
-      "product": {
-        "@media (min-width: 601px)": {
-          "max-width": "100%",
-          "margin-left": "0px",
-          "margin-bottom": "0px"
-        }
-      }
-    }
-  },
-  "productSet": {
-    "styles": {
-      "products": {
-        "@media (min-width: 601px)": {
-          "margin-left": "-20px"
-        }
-      }
-    }
-  }
-}
-      });
-    });
-  }
-})();
-/*]]>*/
-</script>
-
-<p><a name="SD-Backpack"></a></p>
-
-<h3 id="sd-backpack">SD Backpack</h3>
-<p style="font-size: 80%;">Add a micro SD card with the SD backpack! This backpack integrates a micro SD card, power regulation, and level shifters to meet all your data logging needs.</p>
-
-<p style="font-size: 80%;">Pre-order your SD Backpack today for $15!</p>
-
-<div id="product-component-b37f89165bb"></div>
-<script type="text/javascript">
-/*<![CDATA[*/
-
-(function () {
-  var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
-  if (window.ShopifyBuy) {
-    if (window.ShopifyBuy.UI) {
-      ShopifyBuyInit();
-    } else {
-      loadScript();
-    }
-  } else {
-    loadScript();
-  }
-
-  function loadScript() {
-    var script = document.createElement('script');
-    script.async = true;
-    script.src = scriptURL;
-    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
-    script.onload = ShopifyBuyInit;
-  }
-
-  function ShopifyBuyInit() {
-    var client = ShopifyBuy.buildClient({
-      domain: 'bolder-flight-systems.myshopify.com',
-      storefrontAccessToken: '5d031c37716943c132181e6697fc221a',
-    });
-
-    ShopifyBuy.UI.onReady(client).then(function (ui) {
-      ui.createComponent('product', {
-        id: [1375412355174],
-        node: document.getElementById('product-component-b37f89165bb'),
         moneyFormat: '%24%7B%7Bamount%7D%7D',
         options: {
   "product": {
