--- a/products/teensy/adc/index.html
+++ b/products/teensy/adc/index.html
@@ -149,7 +149,9 @@
       
 
       <section class="page__content" itemprop="text">
-        <p><strong>$22</strong></p>
+        <p><img src="/assets/images/adc_top_300.png" alt="image-right" class="align-right" /></p>
+
+<p><strong>$22</strong></p>
 
 <div id="product-component-4839f72a6c8"></div>
 <script type="text/javascript">
