--- a/products/teensy/can/index.html
+++ b/products/teensy/can/index.html
@@ -149,7 +149,9 @@
       
 
       <section class="page__content" itemprop="text">
-        <p><strong>$14</strong></p>
+        <p><img src="/assets/images/can_top_300.png" alt="image-right" class="align-right" /></p>
+
+<p><strong>$14</strong></p>
 
 <div id="product-component-847fb6403b6"></div>
 <script type="text/javascript">
