--- a/products/teensy/flash/index.html
+++ b/products/teensy/flash/index.html
@@ -149,7 +149,9 @@
       
 
       <section class="page__content" itemprop="text">
-        <p><strong>$28</strong></p>
+        <p><img src="/assets/images/flash_top_300.png" alt="image-right" class="align-right" /></p>
+
+<p><strong>$28</strong></p>
 
 <div id="product-component-60924a7d490"></div>
 <script type="text/javascript">
