--- a/products/teensy/frame/index.html
+++ b/products/teensy/frame/index.html
@@ -149,7 +149,10 @@
       
 
       <section class="page__content" itemprop="text">
-        <p><strong>R-78E-1 Regulator: Solo Frame: $15</strong>    <strong>Double Frame $18</strong></p>
+        <p><img src="/assets/images/double_top_250.png" alt="image-right" class="align-right" />
+<img src="/assets/images/solo_top_250.png" alt="image-right" class="align-right" /></p>
+
+<p><strong>R-78E-1 Regulator: Solo Frame: $15</strong>    <strong>Double Frame $18</strong></p>
 
 <p><strong>TSR 1-2450 Regulator: Solo Frame: $20</strong>    <strong>Double Frame $23</strong></p>
 
