--- a/products/teensy/gnss/index.html
+++ b/products/teensy/gnss/index.html
@@ -149,7 +149,9 @@
       
 
       <section class="page__content" itemprop="text">
-        <p><strong>$30</strong></p>
+        <p><img src="/assets/images/gnss_top_500.png" alt="image-right" class="align-right" /></p>
+
+<p><strong>$30</strong></p>
 
 <div id="product-component-a171ff3bc04"></div>
 <script type="text/javascript">
