--- a/products/teensy/index.html
+++ b/products/teensy/index.html
@@ -147,7 +147,7 @@
 
 <h3 id="backpack-frame"><a href="/products/teensy/frame/">Backpack Frame</a></h3>
 
-<p><a href="/products/teensy/frame/"><img src="/assets/images/Double-Frame-200.png" alt="image-left" class="align-left" /></a></p>
+<p><a href="/products/teensy/frame/"><img src="/assets/images/double_top_250.png" alt="image-left" class="align-left" /></a></p>
 
 <p style="font-size: 80%;">Available in Solo and Double variants, the Teensy Backpack Frame allows you to easily mount your teensy and power your projects with 8 - 28V! Optionally available with the TSR 1-2450 regulator for an extended input range of 6.5 - 32V for $5 more.</p>
 
@@ -273,7 +273,7 @@
 
 <h3 id="motion-backpack"><a href="/products/teensy/motion/">Motion Backpack</a></h3>
 
-<p><a href="/products/teensy/motion/"><img src="/assets/images/Motion-Backpack-200.png" alt="image-left" class="align-left" /></a></p>
+<p><a href="/products/teensy/motion/"><img src="/assets/images/motion_top_200r.png" alt="image-left" class="align-left" /></a></p>
 
 <p style="font-size: 80%;">Measure motion and the environment with a MPU-9250 9-DOF inertial measurement unit (IMU) and a BME-280 environment sensor measuring pressure, temperature, and humidity. Perfect for estimating your robot or drone’s orientation and altitude!</p>
 
@@ -399,7 +399,7 @@
 
 <h3 id="gnss-backpack"><a href="/products/teensy/gnss/">GNSS Backpack</a></h3>
 
-<p><a href="/products/teensy/gnss/"><img src="/assets/images/GNSS-200.png" alt="image-left" class="align-left" /></a></p>
+<p><a href="/products/teensy/gnss/"><img src="/assets/images/gnss_top_200.png" alt="image-left" class="align-left" /></a></p>
 
 <p style="font-size: 80%;">Add a multi-constellation GNSS to your project with the Teensy GNSS backpack!</p>
 
@@ -524,6 +524,9 @@
 <p><a name="ADC-Backpack"></a></p>
 
 <h3 id="adc-backpack"><a href="/products/teensy/adc/">ADC Backpack</a></h3>
+
+<p><a href="/products/teensy/adc/"><img src="/assets/images/adc_top_200.png" alt="image-left" class="align-left" /></a></p>
+
 <p style="font-size: 80%;">Add eight channels of 16 bit analog data to your next project with the ADC Backpack! Inputs are pinned at a 0.1” (2.54 mm) pitch along with power and ground for easy potentiometer integration.</p>
 
 <p><a href="/products/teensy/adc/" class="btn btn--primary">More Details</a></p>
@@ -648,7 +651,7 @@
 
 <h3 id="pwm-backpack"><a href="/products/teensy/pwm">PWM Backpack</a></h3>
 
-<p><a href="/products/teensy/pwm"><img src="/assets/images/PWM_Backpack-200.png" alt="image-left" class="align-left" /></a></p>
+<p><a href="/products/teensy/pwm"><img src="/assets/images/pwm_top_200.png" alt="image-left" class="align-left" /></a></p>
 
 <p style="font-size: 80%;">Actuate your project with up to 8 PWM signals from Teensy with the PWM backpack! All channels are pinned for standard servo connectors and one channel can optionally be used for SBUS input for connecting to an SBUS capable receiver.</p>
 
@@ -774,7 +777,7 @@
 
 <h3 id="sbus-backpack"><a href="/products/teensy/sbus">SBUS Backpack</a></h3>
 
-<p><a href="/products/teensy/sbus"><img src="/assets/images/SBUS-Backpack-200.png" alt="image-left" class="align-left" /></a></p>
+<p><a href="/products/teensy/sbus"><img src="/assets/images/sbus_top_200.png" alt="image-left" class="align-left" /></a></p>
 
 <p style="font-size: 80%;">Control up to 8 SBUS capable servos from Teensy with the SBUS backpack! All channels are pinned for standard servo connectors and one channel can optionally be used for SBUS input for connecting to an SBUS capable receiver.</p>
 
@@ -900,7 +903,7 @@
 
 <h3 id="can-backpack"><a href="/products/teensy/can/">CAN Backpack</a></h3>
 
-<p><a href="/products/teensy/can/"><img src="/assets/images/CAN-Backpack-200.png" alt="image-left" class="align-left" /></a></p>
+<p><a href="/products/teensy/can/"><img src="/assets/images/can_top_200.png" alt="image-left" class="align-left" /></a></p>
 
 <p style="font-size: 80%;">Add CAN communication to your project with the CAN backpack!</p>
 
@@ -1025,6 +1028,9 @@
 <p><a name="RS485-Backpack"></a></p>
 
 <h3 id="rs-485-backpack"><a href="/products/teensy/rs485">RS-485 Backpack</a></h3>
+
+<p><a href="/products/teensy/rs485/"><img src="/assets/images/rs485_top_200.png" alt="image-left" class="align-left" /></a></p>
+
 <p style="font-size: 80%;">Add RS-485 communication to your project with the RS-485 backpack!</p>
 
 <p><a href="/products/teensy/rs485/" class="btn btn--primary">More Details</a></p>
@@ -1148,6 +1154,9 @@
 <p><a name="Flash-Backpack"></a></p>
 
 <h3 id="flash-backpack"><a href="/products/teensy/flash/">Flash Backpack</a></h3>
+
+<p><a href="/products/teensy/flash/"><img src="/assets/images/flash_top_200.png" alt="image-left" class="align-left" /></a></p>
+
 <p style="font-size: 80%;">Add 128 MBytes of flash storage with the Flash backpack!</p>
 
 <p><a href="/products/teensy/flash/" class="btn btn--primary">More Details</a></p>
