--- a/products/teensy/motion/index.html
+++ b/products/teensy/motion/index.html
@@ -149,7 +149,9 @@
       
 
       <section class="page__content" itemprop="text">
-        <p><strong>$27</strong></p>
+        <p><img src="/assets/images/motion_top_200.png" alt="image-right" class="align-right" /></p>
+
+<p><strong>$27</strong></p>
 
 <div id="product-component-a42c06bea2a"></div>
 <script type="text/javascript">
