--- a/products/teensy/rs485/index.html
+++ b/products/teensy/rs485/index.html
@@ -149,7 +149,9 @@
       
 
       <section class="page__content" itemprop="text">
-        <p><strong>$18</strong></p>
+        <p><img src="/assets/images/rs485_top_300.png" alt="image-right" class="align-right" /></p>
+
+<p><strong>$18</strong></p>
 
 <div id="product-component-1fab863a1e7"></div>
 <script type="text/javascript">
