--- a/products/teensy/sbus/index.html
+++ b/products/teensy/sbus/index.html
@@ -149,7 +149,9 @@
       
 
       <section class="page__content" itemprop="text">
-        <p><strong>$12</strong></p>
+        <p><img src="/assets/images/sbus_top_300.png" alt="image-right" class="align-right" /></p>
+
+<p><strong>$12</strong></p>
 
 <div id="product-component-f87c97b7ecb"></div>
 <script type="text/javascript">
