Added tutorials for PWM and SBUS backpacks

--- a/products/teensy/pwm/index.html
+++ b/products/teensy/pwm/index.html
@@ -289,6 +289,15 @@
   <li>Optional SBUS input</li>
 </ul>
 
+<h2 id="tutorials">Tutorials</h2>
+<ol>
+  <li><a href="https://github.com/bolderflight/PWM-Intro">PWM Introduction</a>: Learn about the de facto standard for controlling servos, PWM!</li>
+  <li><a href="https://github.com/bolderflight/Reading-PWM">Reading PWM</a>: Gain experience measuring pulse widths!</li>
+  <li><a href="https://github.com/bolderflight/SBUS-Intro">SBUS Introduction</a>: Learn about one of the newest, coolest methods of commanding servos, SBUS!</li>
+  <li><a href="https://github.com/bolderflight/Reading-SBUS">Reading SBUS</a>: Gain experience reading SBUS packets!</li>
+  <li><a href="https://github.com/bolderflight/SBUS-to-PWM">SBUS to PWM Converter</a>: Use your knowledge of PWM and SBUS to create your own SBUS to PWM converter!</li>
+</ol>
+
         
       </section>
 
