Added SD backpack

--- a/products/teensy/index.html
+++ b/products/teensy/index.html
@@ -1277,6 +1277,132 @@
 /*]]>*/
 </script>
 
+<p><a name="SD-Backpack"></a></p>
+
+<h3 id="sd-backpack"><a href="/products/teensy/sd/">SD Backpack</a></h3>
+
+<p><a href="/products/teensy/sd/"><img src="/assets/images/sd_top_200.png" alt="image-left" class="align-left" /></a></p>
+
+<p style="font-size: 80%;">Store gigabytes of data with the SD Backpack!</p>
+
+<p><a href="/products/teensy/sd/" class="btn btn--primary">More Details</a></p>
+
+<p><strong>$12</strong></p>
+
+<div id="product-component-4a18ed171d5"></div>
+<script type="text/javascript">
+/*<![CDATA[*/
+
+    (function () {
+      var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
+      if (window.ShopifyBuy) {
+        if (window.ShopifyBuy.UI) {
+          ShopifyBuyInit();
+        } else {
+          loadScript();
+        }
+      } else {
+        loadScript();
+      }
+
+      function loadScript() {
+        var script = document.createElement('script');
+        script.async = true;
+        script.src = scriptURL;
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
+        script.onload = ShopifyBuyInit;
+      }
+
+      function ShopifyBuyInit() {
+        var client = ShopifyBuy.buildClient({
+          domain: 'bolder-flight-systems.myshopify.com',
+          storefrontAccessToken: '5d031c37716943c132181e6697fc221a',
+        });
+
+        ShopifyBuy.UI.onReady(client).then(function (ui) {
+          ui.createComponent('product', {
+            id: [1569487323238],
+            node: document.getElementById('product-component-4a18ed171d5'),
+            moneyFormat: '%24%7B%7Bamount%7D%7D',
+            options: {
+  "product": {
+    "variantId": "all",
+    "width": "240px",
+    "contents": {
+      "img": false,
+      "imgWithCarousel": false,
+      "title": false,
+      "variantTitle": false,
+      "price": false,
+      "description": false,
+      "buttonWithQuantity": false,
+      "quantity": false
+    },
+    "styles": {
+      "product": {
+        "@media (min-width: 601px)": {
+          "max-width": "100%",
+          "margin-left": "0",
+          "margin-bottom": "50px"
+        }
+      },
+      "variantTitle": {
+        "font-size": "16px"
+      },
+      "description": {
+        "font-size": "16px"
+      },
+      "compareAt": {
+        "font-size": "12px"
+      }
+    }
+  },
+  "cart": {
+    "contents": {
+      "button": true
+    },
+    "styles": {
+      "footer": {
+        "background-color": "#ffffff"
+      }
+    }
+  },
+  "modalProduct": {
+    "contents": {
+      "img": false,
+      "imgWithCarousel": true,
+      "variantTitle": false,
+      "buttonWithQuantity": true,
+      "button": false,
+      "quantity": false
+    },
+    "styles": {
+      "product": {
+        "@media (min-width: 601px)": {
+          "max-width": "100%",
+          "margin-left": "0px",
+          "margin-bottom": "0px"
+        }
+      }
+    }
+  },
+  "productSet": {
+    "styles": {
+      "products": {
+        "@media (min-width: 601px)": {
+          "margin-left": "-20px"
+        }
+      }
+    }
+  }
+}
+      });
+    });
+  }
+})();
+/*]]>*/
+</script>
+
 
     </section>
   </article>
