Holiday shipping delay notice

--- a/products/flight/index.html
+++ b/products/flight/index.html
@@ -136,7 +136,9 @@
     
 
     <section class="page__content" itemprop="text">
-      <h2 id="flight-products">Flight Products</h2>
+      <p class="notice--info">Due to the holiday season, shipping will be delayed between December 18 and January 1. Sorry for any inconvenience.</p>
+
+<h2 id="flight-products">Flight Products</h2>
 
 <p style="font-size: 80%;">All of our products include free domestic shipping. International, business, and research institution customers, please <a href="mailto:info@bolderflight.com">contact us</a> for pricing, support, and engineering service contracts.</p>
 
