--- a/products/teensy/index.html
+++ b/products/teensy/index.html
@@ -136,7 +136,9 @@
     
 
     <section class="page__content" itemprop="text">
-      <h2 id="teensy-backpacks">Teensy Backpacks</h2>
+      <p class="notice--info">Due to the holiday season, shipping will be delayed between December 18 and January 1. Sorry for any inconvenience.</p>
+
+<h2 id="teensy-backpacks">Teensy Backpacks</h2>
 <p style="font-size: 80%;">Arduino has shields, Feather has wings, Raspberry Pi has hats, BeagleBone Black has capes, and now Teensy has backpacks! At Bolder Flight Systems, we love the Teensy and have used it extensively for everything from our <a href="/products/flight/">Research and Development Flight Control Systems</a> to motor and servo test stands, prototyping, and our personal hobby projects. It has the perfect combination of size, power, cost, and support.</p>
 
 <p style="font-size: 80%;">We’re extremely excited to be the first to offer stacking add-on boards for Teensy! Matching the Teensy 3.2 footprint, these high quality boards extend the utility of your Teensy and are perfect for embedding Teensy in your projects. We’ve carefully designed each board to integrate well with each other, so you can mix and match boards without worry. See our <a href="/products/teensy/pinout/">Teensy Backpacks Pinout</a> page for more information on how they stack together.</p>
