Removed the TSR 1-2450 option for now

--- a/products/teensy/frame/index.html
+++ b/products/teensy/frame/index.html
@@ -152,9 +152,8 @@
         <p><img src="/assets/images/double_top_250.png" alt="image-right" class="align-right" />
 <img src="/assets/images/solo_top_250.png" alt="image-right" class="align-right" /></p>
 
-<p><strong>R-78E-1 Regulator: Solo Frame: $15</strong>    <strong>Double Frame $18</strong></p>
-
-<p><strong>TSR 1-2450 Regulator: Solo Frame: $20</strong>    <strong>Double Frame $23</strong></p>
+<p><strong>Solo: $15</strong>
+<strong>Double: $18</strong></p>
 
 <div id="product-component-4d130d1a996"></div>
 <script type="text/javascript">
@@ -275,8 +274,6 @@
 
 <p>Both frames include the <a href="/assets/datasheets/R-78Exx-1.pdf">R-78E-1.0</a> switching power regulator, which provides 1A of clean 5V power from a 8 - 28V input. Unlike linear regulators, switching regulators are very efficient, and this one has a typical efficiency of over 90%.</p>
 
-<p>Optionally, our Backpack Frames can be ordered with the <a href="/assets/datasheets/tsr1.pdf">Traco TSR 1-2450</a> switching power regulator instead of the <a href="/assets/datasheets/R-78Exx-1.pdf">R-78E-1.0</a>. The TSR 1-2450 provides 1A of clean 5V power with a wider input voltage range of 6.5 - 32V. This option is an additional $5 to either frame.</p>
-
 <p>The Teensy Backpack Frame comes fully assembled and tested.</p>
 
 <p>Check out all of our wonderfully small and powerful <a href="/products/teensy/">Teensy Backpacks!</a></p>
@@ -285,7 +282,7 @@
 <ul>
   <li>Temperature range: -40 to +85C (output load derated above +60C)</li>
   <li>Input wire gauge: 16 - 28 AWG</li>
-  <li>Input voltage range: 8 - 28V, optional 6.5 - 32V</li>
+  <li>Input voltage range: 8 - 28V</li>
   <li>Output voltage: 5V</li>
   <li>Output current: 1A</li>
 </ul>
