--- a/products/teensy/index.html
+++ b/products/teensy/index.html
@@ -149,7 +149,7 @@
 
 <p><a href="/products/teensy/frame/"><img src="/assets/images/double_top_250.png" alt="image-left" class="align-left" /></a></p>
 
-<p style="font-size: 80%;">Available in Solo and Double variants, the Teensy Backpack Frame allows you to easily mount your teensy and power your projects with 8 - 28V! Optionally available with the TSR 1-2450 regulator for an extended input range of 6.5 - 32V for $5 more.</p>
+<p style="font-size: 80%;">Available in Solo and Double variants, the Teensy Backpack Frame allows you to easily mount your teensy and power your projects with 8 - 28V!</p>
 
 <p><a href="/products/teensy/frame/" class="btn btn--primary">More Details</a></p>
 
