--- a/team.html
+++ b/team.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Bolder Flight Systems, creators of the best platform and services for autonomy research, development, and commercialization">
+    <meta name="keywords" content="drones, uas, uav, high altitude balloon, nanosatellite, autonomy, autonomous, flight control, dynamics, avionics, systems">
     <meta name="author" content="Brian Taylor">
     <title>Bolder Flight Systems</title>
     <link rel="stylesheet" href="./css/style.css">
