--- a/team.html
+++ b/team.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Bolder Flight Systems, creators of the best platform and services for autonomy research, development, and commercialization">
     <meta name="keywords" content="drones, uas, uav, high altitude balloon, nanosatellite, autonomy, autonomous, flight control, dynamics, avionics, systems">
     <meta name="author" content="Brian Taylor">
+    <link rel="icon" href="/favicon.ico" sizes="16x16 32x32 48x48 64x64 110x110 114x114" type="image/vnd.microsoft.icon">
     <title>Bolder Flight Systems</title>
     <link rel="stylesheet" href="./css/style.css">
   </head>
