--- a/team.html
+++ b/team.html
@@ -6,7 +6,12 @@
     <meta name="description" content="Bolder Flight Systems, creators of the best platform and services for autonomy research, development, and commercialization">
     <meta name="keywords" content="drones, uas, uav, high altitude balloon, nanosatellite, autonomy, autonomous, flight control, dynamics, avionics, systems">
     <meta name="author" content="Brian Taylor">
-    <link rel="icon" href="/favicon.ico" sizes="16x16 32x32 48x48 64x64 110x110 114x114" type="image/vnd.microsoft.icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#75b9e6">
+    <meta name="theme-color" content="#75b9e6">
     <title>Bolder Flight Systems</title>
     <link rel="stylesheet" href="./css/style.css">
   </head>
