Updated for PDAS

--- a/team.html
+++ b/team.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Bolder Flight Systems, creators of the best platform and services for autonomy research, development, and commercialization">
-    <meta name="keywords" content="drones, uas, uav, high altitude balloon, nanosatellite, autonomy, autonomous, flight control, dynamics, avionics, systems">
+    <meta name="description" content="Bolder Flight Systems, creators of flight control and data acquisition systems with unparalleled data quality and robustness.">
+    <meta name="keywords" content="drones, uas, uav, high altitude balloon, aircraft, data acquisition, research, certification, flight test, flight control, dynamics, avionics, systems">
     <meta name="author" content="Brian Taylor">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -26,6 +26,8 @@
             <nav>
               <ul id="nav">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="control.html">Flight Control</a></li>
+                <li><a href="pdas.html">Data Acquisition</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
                 <li class="current"><a href="team.html">Team</a></li>
               </ul>
