--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Bolder Flight Systems, creators of the best platform and services for autonomy research, development, and commercialization">
-    <meta name="keywords" content="drones, uas, uav, high altitude balloon, nanosatellite, autonomy, autonomous, flight control, dynamics, avionics, systems">
+    <meta name="description" content="Bolder Flight Systems, creators of flight control and data acquisition systems with unparalleled data quality and robustness.">
+    <meta name="keywords" content="drones, uas, uav, high altitude balloon, aircraft, data acquisition, research, certification, flight test, flight control, dynamics, avionics, systems">
     <meta name="author" content="Brian Taylor">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -26,6 +26,8 @@
             <nav>
               <ul id="nav">
                 <li class="current"><a href="index.html">Home</a></li>
+                <li><a href="control.html">Flight Control</a></li>
+                <li><a href="pdas.html">Data Acquisition</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="team.html">Team</a></li>
               </ul>
@@ -39,72 +41,38 @@
       <div id="boxes">
         <div class="box showcase">
           <div id="showcase-text">
-            <h1>The best platform for autonomy research, development, and commercialization</h1>
+            <h1>Flight control and data acquisition systems with unparalleled data quality and robustness.</h1>
           </div>
         </div>
         <div class="box box1">
-          <h1>Exceptional Value</h1>
-          <a name="value"></a> 
-          <p>Bring your autonomy technology to market safer and at a fraction of the time and cost. Our innovative integrated avionics backbone is extraordinarily flexible while maintaining low-latency and determinism, enabling your technology to be rapidly and safety integrated on ground, air, and space vehicles.</p>
+          <h1>Rooted in Experience</h1>
+          <p>We're a team of former NASA and DoD researchers and flight test engineers. We understand the harshness of the flight environment and critical importance of data quality and robustness. We also understand the extensive level of effort required to complete a flight test program. Our innovative flight control and data acquisition systems are designed to enable you to rapidly transition concepts through flight research, development, and commercialization while providing class-leading data quality and robustness.</p>
         </div>
         <div class="box box2">
-          <img src="./img/fcs.png">
-        </div>
-        <div class="box box3">
-          <h1>Flexibility and Robustness</h1>
-          <a name="flexibility"></a> 
-          <p>Our core technology is an innovative, tightly integrated bus topology, configuration overlay system, and scheduler. These key components enable our integrated avionics backbone to support an unlimited number of sensors, actuators, and processors. Our system rapidly configures timing-critical sensing, estimation, and control algorithms and includes a flexible messaging interface with language-neutral API's for integrating payloads and higher-level autonomy control loops. A fixed time delay between sensing and actuation is maintained, which enables analysis of system robustness to uncertainties and external disturbances. This feature is critical to ensuring that your autonomous system will operate safely and reliably. This combination of flexibility and robustness is unique to our integrated avionics backbone.</p>
-        </div>
-        <div class="box box4">
           <img src="./img/mawing2.jpg">
         </div>
+        <div class="box box3">
+          <h1><a href="control.html" class="tlink">Turn Key Flight Control System</a></h1>
+          <p>Leveraging flexibility in our flight control system, we will work with you to rapidly gather flight and ground test data on your vehicle, enabling us to explore sensing options, develop vehicle models, and design control laws. Because we own the hardware and software, we will repackage our flight control system to perfectly integrate with your vehicle while minimizing size, weight, cost, and power. We'll manage manufacturing and integration of control systems into your vehicles and seamlessly deploy validated software updates to your fleet.</p>
+        </div>
+        <div class="box box4">
+          <img src="./img/fcs.png">
+        </div>
         <div class="box box5">
-          <h1>Wide Ranging Applications</h1>
-          <a name="applications"></a> 
-          <p>With unparalleled data quality, flexibility, and robustness, our system has been used to support cutting-edge research and commercialization on a wide-range of vehicles and applications at Universities, government agencies, and within industry:</p> 
-          <ul>
-            <li>Autonomous pothole detection and mapping using city buses</li>
-            <li>Invasive species surveys and mapping on fixed-wing drones</li>
-            <li>Multi-rotor handling-qualities research</li>
-            <li>Active flutter suppression and wing morphing of a large fixed-wing drone</li>
-            <li>Portable data acquisition system for manned research aircraft</li>
-            <li>High-altitude balloon and nanosatellite x-ray navigation research</li>
-          </ul>
+          <h1><a href="pdas.html" class="tlink">Portable Data Acquisition System (PDAS)</a></h1>
+          <p>Developed with the International Test Pilots School (ITPS), PDAS was designed and built to deliver high quality aeronautics data in a small and portable package. 
+            <ul>
+              <li>200 Hz sample rate</li>
+              <li>High accuracy GNSS-aided INS</li>
+              <li>12 ultra-low noise analog channels with configurable gains</li>
+              <li>Air data measurement and estimation</li>
+              <li>IADS interface for real-time displays and analysis</li>
+              <li>Simple configuration, flexible power options</li>
+            </ul>
+          </p> 
         </div>
         <div class="box box6">
-          <img src="./img/applications.jpg">
-        </div>
-        <div class="box box7">
-          <h1>Services</h1>
-          <a name="services"></a> 
-          <p>Our team are experts in design of experiments, vehicle dynamics, estimation, stability, and controls. We will work with you to develop and conduct an efficient test campaign. We'll analyze your data and rapidly update your vehicle models, simulations, and control laws. We can estimate your vehicle's performance and check for robustness against disturbances and uncertainties.</p>
-        </div>
-        <div class="box box8">
-          <img src="./img/data.png">
-        </div>
-        <div class="box box9">
-          <h1>Commercialization</h1>
-          <a name="commercialization"></a> 
-          <p>We own the hardware and software. When you're ready to transition your technology into a product, we'll repackage our system to meet your operational requirements in a breath-takingly small and robust device. We can design systems to meet the harshest environmental conditions, including wide thermal ranges, conformal coatings, ingress protection, and water-proofing. All of our design, manufacturing, and assembly is conducted in the United States and we can support ITAR and Export Controlled projects.</p>
-        </div>
-        <div class="box box10">
-          <img src="./img/biz.png">
-        </div>
-        <div class="box box11">
-          <h1>Class Leading Support</h1>
-          <a name="support"></a> 
-          <p>We're with you every step of the way. We offer turnkey solutions to deploying and maintaining your autonomous fleet. We'll manage manufacturing and integration of control systems into your vehicles and seamless rollouts of validated software updates. We'll monitor data from your vehicles and update control laws to maintain robustness and performance over the long haul.</p>
-        </div>
-        <div class="box box12">
-          <img src="./img/code.jpg">
-        </div>
-        <div class="box box13">
-          <h1>Continuous Innovation</h1>
-          <a name="innovation"></a> 
-          <p>We're a team of innovators. Constantly re-investing into research and development, we're working to advance the state of the art in flexible, safety-focused autonomous systems. We were recently awarded two NASA Small Business Innovative Research grants building on our core technology to improve the safety, performance, and robustness of autonomous vehicles.</p>
-        </div>
-        <div class="box box14">
-          <img src="./img/innovation.jpg">
+          <img src="./img/pdas_iso.png">
         </div>
         <div class="box box15">
           <h1>Contact Us</h1>
