--- a/pdas.html
+++ b/pdas.html
@@ -120,8 +120,7 @@
           </ul>          
         </div>
         <div class="box box6">
-          <img src="./img/IMG_3757.JPG">
-          <img src="./img/IMG_3758.JPG">
+          <img src="./img/pdas_install.png">
         </div>
         <div class="box box7">
           <h1>Documents</h1>
