--- a/pdas.html
+++ b/pdas.html
@@ -55,8 +55,8 @@
           <img src="./img/pdas_iso.png">
         </div>
         <div class="box box3">
-          <h1>ITPS</h1>
-          <p>PDAS was developed with the International Test Pilots School (ITPS) to facilitate test pilot and flight test engineer training and rapid flight data collection on ITPS and customer aircraft to support aeronautics research, aircraft analysis, and certification efforts. PDAS is ideally suited for flight test organization, providing a rapid means of collecting high quality flight data and enabling organizations to move through the flight validation process more quickly.</p>
+          <h1>Rapid Flight Testing</h1>
+          <p>PDAS was developed with the International Test Pilots School (ITPS) to facilitate test pilot and flight test engineer training and rapid flight data collection on ITPS and customer aircraft to support aeronautics research, aircraft analysis, and certification efforts. PDAS is ideally suited for flight test organizations, providing a rapid means of collecting high quality flight data and enabling organizations to move through the flight validation process more quickly.</p>
         </div>
         <div class="box box4">
           <img src="./img/IMG_3759.JPG">
@@ -128,7 +128,7 @@
             <li><a href="./pdas/PDAS Brochure.pdf">Brochure</a>: one page PDAS brochure.</li>
             <li><a href="./pdas/PDAS User Manual.pdf">User Manual</a>: describes the PDAS, specifications, operations, and data.</li>
             <li><a href="./pdas/iads_pdas.prn">IADS PRN File</a>: a file specifying the data packet sent by the PDAS to an IADS client. Used by the Symvionics IADS software to setup the PDAS as a data source for building real-time displays and analysis tools.</li>
-            <li><a href="./pdas/pdas_converter.zip">PDAS Data Converter</a>: a stand-alone executable for the Windows operating system. This software converts PDAS generated data files to CSV or MAT format.</li>
+            <li>PDAS Data Converter: a stand-alone executable for the Windows operating system. This software converts PDAS generated data files to CSV or MAT format. Please contact <a href="mailto:support@bolderflight.com">support@bolderflight.com</a> for a copy of this software.</li>
           </ul>
         </div>
       </div>
