MQI: updated team to add KWM

--- a/team.html
+++ b/team.html
@@ -52,10 +52,10 @@
           <p>Melissa Iszler has a diverse set of skills and leadership experience. She has worked on 13 different aircraft of various types consisting of UAS, helicopters, fighters, and one bomber. Prior to joining Bolder Flight Systems, Melissa worked in the private industry and for the Department of Defense in the engineering fields of aircraft airworthiness, flight test, aircraft performance, flying qualities, air data, structures, maintenance, and repairs. She has experience in various types of engineering from technical to hands-on roles such as control room operations, computer modeling, manufacturing support, maintenance field support, and aircraft repair and inspections. She also has a private pilot’s license.</p> 
         </div>
         <div class="team-box t4">
-          <img src="./img/crh.png">
-          <h1>Callie Holland <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/callie-holland-a55bb011/"><img src="img/li.png"></a></h1>
-          <h3>Senior Engineer</h3>
-          <p>Callie Holland, PMP, has a background in both flight operations and technical project management. She has a proven ability to deliver high quality products ahead of schedule, frequently exceeding customer expectations. During her tenure at NASA Armstrong Flight Research Center, Callie served as the Lead Flight Operations Engineer on the F-15B Aeronautics Research Testbed ensuring aircraft airworthiness and providing real-time flight support. She has a private pilot’s license.</p> 
+          <img src="./img/kwm.png">
+          <h1>Kevin Maris <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/kevinwmaris/"><img src="img/li.png"></a></h1>
+          <h3>CFO</h3>
+          <p>Kevin brings a unique background and specialized skillset to Bolder Flight Systems as he currently serves in the role of Chief Financial Officer.  He began his career in the accounting and finance world as a CFO for a regional, mid-west distribution company, where he refined his technical skills, grew as a leader, and served for nearly a decade.  Driven to add greater value, Kevin realized the need to become proficient in sales and marketing.  Fortunately, these activities came natural to him and he excelled in a variety of business development leadership roles in the investment, distribution, manufacturing, and aerospace markets.  In his latest role, Kevin led the business development efforts for an aerospace engineering firm, primarily specializing in handling qualities, vehicle dynamics and controls.  He has worked with a variety of commercial aerospace customers and government organizations.</p> 
         </div>
       </div>
     </section>
