updated C-FCS page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
               <ul id="nav">
                 <li class="current"><a href="index.html">Home</a></li>
                 <li><a href="control.html">Flight Control</a></li>
+                <li><a href="cfcs.html">C-FCS</a></li>
                 <li><a href="pdas.html">Data Acquisition</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="team.html">Team</a></li>
@@ -52,7 +53,7 @@
           <img src="./img/mawing2.jpg">
         </div>
         <div class="box box3">
-          <h1><a href="control.html" class="tlink">Turn Key Flight Control System</a></h1>
+          <h1><a href="control.html" class="tlink">Turn-key Flight Control System</a></h1>
           <p>Leveraging flexibility in our flight control system, we will work with you to rapidly gather flight and ground test data on your vehicle, enabling us to explore sensing options, develop vehicle models, and design control laws. Because we own the hardware and software, we will repackage our flight control system to perfectly integrate with your vehicle while minimizing size, weight, cost, and power. We'll manage manufacturing and integration of control systems into your vehicles and seamlessly deploy validated software updates to your fleet.</p>
         </div>
         <div class="box box4">
