--- a/control.html
+++ b/control.html
@@ -27,6 +27,7 @@
               <ul id="nav">
                 <li><a href="index.html">Home</a></li>
                 <li class="current"><a href="control.html">Flight Control</a></li>
+                <li><a href="cfcs.html">C-FCS</a></li>
                 <li><a href="pdas.html">Data Acquisition</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
                 <li><a href="team.html">Team</a></li>
