--- a/pdas.html
+++ b/pdas.html
@@ -25,8 +25,9 @@
             </div>
             <nav>
               <ul id="nav">
-                <li class="current"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="control.html">Flight Control</a></li>
+                <li><a href="cfcs.html">C-FCS</a></li>
                 <li class="current"><a href="pdas.html">Data Acquisition</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
                 <li><a href="team.html">Team</a></li>
